--- a/style.css
+++ b/style.css
@@ -4,3 +4,19 @@
     box-sizing: border-box;
     font-family: 'Ysabeau Infant',sans-serif;
 }
+
+.secao-banner {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.secao-banner video {
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
