--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     font-family: 'Ysabeau Infant',sans-serif;
 }
 
-.secao-banner {
+/*.secao-banner {
     width: 100%;
     height: 100vh;
     display: flex;
@@ -19,4 +19,21 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+*/
+.container-informacoes {
+    width: 768px;
+    padding: 0 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    gap: 40px;
+}
+
+.imgPerfil-titulo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
 }
