Estilização da imagem de Perfil

--- a/style.css
+++ b/style.css
@@ -37,3 +37,16 @@
     align-items: center;
     gap: 20px;
 }
+
+.imgPerfil {
+    width: 200px;
+    height: 200px;
+    border-radius: 100%;
+    background-image: url('./assets/neymar.jpg');
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
