--- a/style.css
+++ b/style.css
@@ -15,12 +15,12 @@
 
 .secao-banner video {
     position: absolute;
-    z-index: -1;
+    z-index: -2;
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
-*/
+}*/
+
 .container-informacoes {
     width: 768px;
     padding: 0 20px;
@@ -56,7 +56,39 @@
     position: absolute;
     width: 215px;
     height: 215px;
-    background: linear-gradient(90deg, #ffdff0, #009c3b);
+    background: linear-gradient(90deg, #ffdf00, #009c3b);
     z-index: -1; /* Coloca o efeito atrás do elemento */
     border-radius: 100%;
+}
+
+.imgPerfil-titulo h1 {
+    position: relative;
+    font-size: 50px;
+    
+    text-shadow: 2px 6px 3px #000000;
+    
+}
+
+h1::before {
+    content: "";
+    position: absolute;
+    width: 55px;
+    height: 5px;
+    background: linear-gradient(90deg, #ffdf00, #009c3b);
+    bottom: 2px;
+    left: 5px;
+    border-radius: 4px;
+}
+
+h1::after {
+    content: "";
+    position: absolute;
+    bottom: 12px;
+    right: -20px;
+    background-image: url(./assets/verificado.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 20px;
+    height: 20px;
 }
