--- a/style.css
+++ b/style.css
@@ -3,9 +3,10 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Ysabeau Infant',sans-serif;
+    text-decoration: none;
 }
 
-/*.secao-banner {
+.secao-banner {
     width: 100%;
     height: 100vh;
     display: flex;
@@ -15,11 +16,11 @@
 
 .secao-banner video {
     position: absolute;
-    z-index: -2;
+    z-index: -1;
     width: 100%;
     height: 100%;
     object-fit: cover;
-}*/
+}
 
 .container-informacoes {
     width: 768px;
@@ -91,4 +92,40 @@ h1::after {
     background-repeat: no-repeat;
     width: 20px;
     height: 20px;
+}
+
+.container-links {
+    max-width: 768px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+
+.container-links a {
+    width: 100%;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    font-size: 20px;
+    font-weight: 600;
+    text-align: center;
+    border-radius: 20px;
+    background-color: #0200006e;
+    color: #fff;
+}
+
+.container-links a:hover {
+    background-color: #fff;
+    color: #000;
+}
+
+.container-links a p {
+    width: 90%;  /* Afasta o páragrafo da img */
+}
+
+.container-links a img {
+    width: 30px;
 }
