--- a/style.css
+++ b/style.css
@@ -129,3 +129,21 @@ h1::after {
 .container-links a img {
     width: 30px;
 }
+
+.secao-tabela {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 40px;
+    font-family: "Montserrat", sans-serif;
+
+    background-image: url("./assets/imagem-de-fundo.jpg");
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+}
